fix for logo gathering
